<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/colored_bar"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:background="#00BCD4"/>

    <LinearLayout
        android:id="@+id/picker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
    <Spinner
        android:id="@+id/listOfCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_weight="0"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/dateSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:layout_weight="1"
        android:text="@string/date"/>
    <Button
        android:id="@+id/pickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="5dp"
        android:text="@string/pick_a_date"/>

    </LinearLayout>
    <Button
        android:id="@+id/showAvailableSlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:text="@string/show_available_slot" />

    <Button
        android:id="@+id/showMyBookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@id/showAvailableSlot"
        android:text="@string/show_my_bookings" />


</RelativeLayout>
