<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/colored_bar"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:background="#00BCD4" />

    <Spinner
        android:id="@+id/listOfCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/selectACity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_a_city"
        android:textSize="20sp" />

    <Button
        android:id="@+id/showAvailableSlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:text="@string/show_available_slot" />

    <Button
        android:id="@+id/showMyBookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@id/showAvailableSlot"
        android:text="@string/show_my_bookings" />

<!--    first center-->

    <LinearLayout
        android:id="@+id/center1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/colored_bar"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/center1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_marginStart="20dp"
            android:text="@string/center_1"
            android:textSize="13sp" />
        <TextView
            android:id="@+id/court_11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/court_1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/slot111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_7am_9pm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot112"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_10am_1pm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot113"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_2pm_4pm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot114"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_3_30pm_6pm"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/court_12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/court_2"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/slot121"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_7am_9pm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot122"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_10am_11_30am"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot123"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_11_45am_2pm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot124"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_2_15pm_5pm"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/court_13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/court_3"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/slot131"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_9am_10am"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot132"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_1pm_3pm"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/court_14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/court_4"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/slot141"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_1pm_3pm"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/slot142"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_3_30pm_6pm"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <!--    second center-->

    <LinearLayout
        android:id="@+id/center2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/center2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_marginStart="20dp"
            android:text="@string/center_2"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/court_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/court_1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/slot211"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_7am_9pm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot212"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_10am_1pm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot213"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_2pm_4pm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot214"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_3_30pm_6pm"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/court_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/court_2"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/slot221"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_7am_9pm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_10am_11_30am"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot223"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_11_45am_2pm"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot224"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_2_15pm_5pm"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/court_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/court_3"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/slot231"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_9am_10am"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slot232"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_1pm_3pm"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/court_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/court_4"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFC107"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/slot241"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_1pm_3pm"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/slot242"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_6pm_7_30pm"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
</ScrollView>